# app/Http/Swagger/Category/CategorySwagger.php
@@ -134,6 +134,34 @@ class CategorySwagger {
 
     }
 
+     /**
+     * @OA\Post(
+     *     path="/api/category/delete",
+     *     summary="Delete thông tin category",
+     *     security={{"bearerAuth":{}}},
+     *     tags={"Category"},
+     *     @OA\Parameter(ref="#/components/parameters/api_key"),
+     *     @OA\Parameter(ref="#/components/parameters/screen_id"),
+     *     @OA\Parameter(
+     *          name="id",
+     *          description="id",
+     *          in="query",
+     *          @OA\Schema(type="string", example="")
+     *      ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Thành công",
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthorized"
+     *     )
+     * )
+     */
+    public function delete() {
+
+    }
+
 
 
 }
